--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -135,6 +135,7 @@ p {
     justify-content: center;
     align-items: center;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+    transform: rotate(90deg)
 }
 
 .generate-button svg {
