--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -189,6 +189,12 @@ p {
     width: 100%;
 }
 
+.excuse-item-container:hover {
+    background-color: #D9D9D9;
+    .copy-button{
+        background-color: #D9D9D9;
+    }
+}
 
 .excuse-item {
     padding: 12px;
