--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,6 +4,10 @@
     border-radius: 15px;
 }
 
+body{
+    color: #000;
+}
+
 .main {
     display: flex;
     flex-direction: column;
@@ -151,26 +155,10 @@ p {
     box-shadow: 2px 2px 12px rgba(50, 50, 50, 0.5);
 }
 
-/*
-.skeleton {
-    width: 100%;
-    height: 35px;
-    background: linear-gradient(90deg, #ccc 25%, #ddd 50%, #ccc 75%);
-    background-size: 200% 100%;
-    animation: loading 1.5s infinite linear;
-    border-radius: 4px;
-    margin: 10px 0;
+#input-select {
+    display: flex;
+    gap: 50px; /* Ajuste l'espacement entre les deux */
 }
-
-@keyframes loading {
-    0% {
-        background-position: 200% 0;
-    }
-    100% {
-        background-position: -200% 0;
-    }
-}
-*/
 
 .excuse-list {
     margin-top: 20px;
