--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,12 +1,37 @@
+:root {
+    --body-background: linear-gradient(135deg, #667eea, #764ba2);
+    --background-color: #fefefe;
+    --text-color: black;
+    --button-background: #000;
+    --button-text-color: #fefefe;
+    --card-background: #EDEDED;
+    --card-hover-background: #D9D9D9;
+    --generate-button-background: #000;
+    --generate-button-hover-background: #484242;
+    --generate-button-border: #000;
+    --generate-button-hover-border: #333;
+}
+
+[data-theme="dark"] {
+    --body-background: linear-gradient(135deg, #3a3a3a, #222222);
+    --background-color: #1e1e1e;
+    --text-color: white; 
+    --button-background: #333; 
+    --button-text-color: #fefefe;
+    --card-background: #333;
+    --card-hover-background: #444;
+    --generate-button-background: #555; 
+    --generate-button-hover-background: #666; 
+    --generate-button-border: #333;
+    --generate-button-hover-border: #555;
+}
+
 .home-container {
-    background-color: #fefefe;
+    background-color: var(--background-color);
     padding: 25px;
     border-radius: 15px;
 }
 
-body{
-    color: #000;
-}
 
 .main {
     display: flex;
@@ -26,9 +51,8 @@ body{
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #667eea, #764ba2);
-    color: #fff;
+    background: var(--body-background);
+    color: var(--text-color);
     text-align: center;
     margin: 0;
     padding: 0;
@@ -50,12 +74,12 @@ h1 {
     font-size: 32px;
     margin-bottom: -5px;
     font-weight: 600;
-    color: #000;
+    color: var(--text-color);
 }
 
 p {
     margin-bottom: 30px;
-    color: #000;
+    color: var(--text-color);
 }
 
 .select-container {
@@ -128,9 +152,9 @@ p {
 
 .generate-button {
     padding: 15px;
-    background: #000;
-    color: #fefefe;
-    border: 2px solid black;
+    background: var(--generate-button-background);
+    color: var(--button-text-color);
+    border: 2px solid var(--generate-button-border);
     border-radius: 50%;
     font-size: 14px;
     cursor: pointer;
@@ -150,8 +174,8 @@ p {
 }
 
 .generate-button:hover {
-    border-color: #333;
-    background-color: #484242;
+    border-color: var(--generate-button-hover-border);
+    background-color: var(--generate-button-hover-background);
     box-shadow: 2px 2px 12px rgba(50, 50, 50, 0.5);
 }
 
@@ -168,7 +192,7 @@ p {
 }
 
 .excuse-item-container {
-    background-color: #EDEDED;
+    background-color: var(--card-background);
     border-radius: 15px;
     display: flex;
     justify-content: space-around;
@@ -178,10 +202,10 @@ p {
 }
 
 .excuse-item-container:hover {
-    background-color: #D9D9D9;
-    .copy-button{
+    background-color: var(--card-hover-background);
+    /* .copy-button{
         background-color: #D9D9D9;
-    }
+    } */
 }
 
 .excuse-item {
