--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -26,6 +26,27 @@
     --generate-button-hover-border: #555;
 }
 
+
+.button-primary, .theme-toggle-button  {
+    background-color: var(--button-background);
+    color: var(--button-text-color);
+    border: 2px solid var(--button-background);
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.button-secondary{
+    background-color: var(--button-background);
+    color: var(--button-text-color);
+    border: 2px solid var(--button-background);
+    cursor: pointer;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    border-radius: 10px;
+}
+
 .home-container {
     background-color: var(--background-color);
     padding: 25px;
@@ -77,16 +98,12 @@ h1 {
     color: var(--text-color);
 }
 
-p {
-    margin-bottom: 30px;
-    color: var(--text-color);
-}
 
 .select-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 5px;
+    gap: 40px;
     margin-bottom: 20px;
 }
 
@@ -163,7 +180,7 @@ p {
     justify-content: center;
     align-items: center;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
-    transform: rotate(90deg)
+    transform: rotate(90deg);
 }
 
 .generate-button svg {
