--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -45,6 +45,7 @@
     cursor: pointer;
     transition: background-color 0.3s ease, border-color 0.3s ease;
     border-radius: 10px;
+    padding: 5px;
 }
 
 .home-container {
@@ -244,4 +245,24 @@ h1 {
 
 .copy-button:hover {
     background-color: transparent;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: end;
+}
+
+.header-button {
+    background-color: var(--button-background);
+    color: var(--button-text-color);
+    border: 2px solid var(--button-background);
+    border-radius: 8px;
+    padding: 12px;  
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    text-decoration: none;
+    color: white;
 }
